# prog-udf

./: .gitignore  generate.sh  main.py  pyproject.toml
2025-02-26/: task-02.py  task-03.py  task-04.py  task-05.py  task-06.py  task-07.py  task-08.py
2025-03-12/: task-01.py  task-02.py  task-03.py  task-04.py  task-05.py  task-06.py  task-07.py  task-08.py  task-09.py
2025-03-19/: task-01.py  task-02.py  task-03.py  task-04.py  task-05.py  task-06.py  task-07.py  task-08.py  task-09.py  task-10.py
2025-03-20/: task-01.py  task-02.py  task-03.py
2025-03-26/: task-01.py  task-02.py  task-03.py
2025-04-02/: task-01.py  task-02.py  task-03.py  task-04.py
2025-04-09/: task-01.py  task-02.py  task-03.py  task-04.py
2025-04-16/: task-01.py  task-02.py  task-03.py  task-04.py  task-05.py  task-06.py  task-07.py  task-08.py  task-09.py  task-10.py  task-11.py  task-12.py  task-13.py
2025-04-23/: task-01.py  task-02.py
